# coloso-python-diffusion-models

./: .buildinfo  .gitignore  Makefile  README.html  README.md  _config.yml  _toc.yml  genindex.html  objects.inv  output.json  output.txt  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yaml
.jupyter_book/: _config.yml  _toc.yml
_sources/: README.md
_sources/lectures/: section-03-10.ipynb  section-03-11.ipynb  section-07-24.ipynb
_static/: documentation_options.js
lectures/: section-01-03.html  section-02-05.html  section-02-05.ipynb  section-03-08.html  section-03-08.ipynb  section-03-09.html  section-03-09.ipynb  section-03-10.html  section-03-10.ipynb  section-03-11.html  section-03-11.ipynb  section-04-12.html  section-04-12.ipynb  section-06-18.html  section-06-18.ipynb  section-07-19.html  section-07-20.html  section-07-20.ipynb  section-07-21.html  section-07-21.ipynb  section-07-22.html  section-07-23.html  section-07-23.ipynb  section-07-24.html  section-07-24.ipynb  section-07-25.html  section-07-25.ipynb  section-07-26.html  section-07-26.ipynb  section-07-27.html  section-07-27.ipynb  section-07-28.html  section-07-28.ipynb  section-07-29.html
materials/figures/: LoRA.drawio  README.html  README.md  clip.drawio  controlnet.drawio  latent-diffusion_stable-diffusion.drawio
materials/notebooks/: activation-functions.html  activation-functions.ipynb  diffusion-process.html  diffusion-process.ipynb  distribution-shift.html  latent-data.html  linear-regression.html  linear-regression.ipynb  noise-scheduler.html  noise-scheduler.ipynb  (+2 more)
(+9 files in other folders)
